fix for image alignment (editor js)

--- a/media/js/cres/src/element/control/EditorJs/tune/Alignment/index.scss
+++ b/media/js/cres/src/element/control/EditorJs/tune/Alignment/index.scss
@@ -7,3 +7,15 @@
 .ce-tune-alignment--left {
     text-align: left;
 }
+
+.ce-tune-alignment--center .image-tool__image-picture {
+    margin-left:auto;
+    margin-right: auto;
+}
+
+.ce-tune-alignment--left .image-tool__image-picture {
+    margin-right: auto;
+}
+.ce-tune-alignment--right .image-tool__image-picture {
+    margin-left:auto;
+}
